@@ -139,3 +139,4 @@ A.powerpc-apple-darwin7.8.0
 A.i386-unknown-freebsd6.0
 A.ia64-unknown-linux-rhel4
 A.i386-pc-linux-rhel4
+A.sparc-sun-solaris2.10
