@@ -1,5 +1,15 @@
 2005-03-18  Erez Zadok  <ezk@cs.sunysb.edu>
 
+	* conf/transp/transp_tli.c (get_nfs_version): use proper type for
+	versout on Solaris (rpcvcers_t).
+
+	* amd/mapc.c (mapc_showtypes): if last map type to print, don't
+	append newline or comma to it.
+
+	* libamu/mount_fs.c (print_nfs_args): cast struct netbuf pointer
+	to %lx because on Solaris 10 sparc gcc-3.4.3 complains about
+	casting it to an int (size is different).
+
 	* configure.in, NEWS: prepare for 6.1-rc1 release.
 
 2005-03-17  Erez Zadok  <ezk@cs.sunysb.edu>
